@@ -15,12 +15,12 @@ tasks.withType(AbstractCompile)*.options*.encoding = tasks.withType(GroovyCompil
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(24)
     }
 }
 
-sourceCompatibility = '21'
-targetCompatibility = '21'
+sourceCompatibility = '24'
+targetCompatibility = '24'
 
 repositories {
     mavenCentral()
@@ -35,14 +35,17 @@ dependencies {
     implementation group: 'org.ow2.asm', name: 'asm-util', version: asmVersion
     implementation group: 'org.ow2.asm', name: 'asm-tree', version: asmVersion
     implementation group: 'org.ow2.asm', name: 'asm-analysis', version: asmVersion
-    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.4-M4-groovy-4.0'
+    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.4-M6-groovy-4.0'
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    testImplementation 'org.apache.groovy:groovy:4.0.27'
+    testImplementation 'org.apache.groovy:groovy-test:4.0.27'
 }
 
 test {
     testLogging {
         events 'passed', 'failed', 'skipped'
     }
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
 
 gradle.projectsEvaluated {
